--- a/environment/pyproject.toml
+++ b/environment/pyproject.toml
@@ -3,11 +3,13 @@ name = "aind-vr-foraging-primary-qc"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
-    "aind-behavior-vr-foraging",
+    "aind-behavior-vr-foraging[data]",
     "aind-data-schema>=1.4.0",
+    "aind-data-schema-models>=0.7.5",
     "contraqctor>=0.4.3",
+    "pydantic-settings>=2.10.1",
 ]
 
 [tool.uv.sources]
