--- a/environment/pyproject.toml
+++ b/environment/pyproject.toml
@@ -13,4 +13,4 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-aind-behavior-vr-foraging = { git = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.git", rev = "feat-add-data-contract" }
+aind-behavior-vr-foraging = { git = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.git", rev = "dev" }
