feat: data schema 2.0

--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -19,3 +19,6 @@ RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 ENV PATH="/root/.local/bin:$PATH"
 COPY ./pyproject.toml ./uv.lock ./
 RUN uv sync --locked --no-dev
+
+COPY postInstall /
+RUN /postInstall
