--- a/environment/pyproject.toml
+++ b/environment/pyproject.toml
@@ -6,11 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aind-behavior-vr-foraging[data]",
-    "aind-data-schema>=1.4.0",
-    "aind-data-schema-models>=0.7.5",
+    "aind-data-schema>=2.0",
     "contraqctor>=0.4.3",
     "pydantic-settings>=2.10.1",
 ]
 
 [tool.uv.sources]
-aind-behavior-vr-foraging = { git = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.git", rev = "dev" }
+aind-behavior-vr-foraging = { git = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.git", rev = "4f194d22fae91f8108ab26cecba19527b9f19485" }
