--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -18,4 +18,4 @@ RUN apt-get update \
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 ENV PATH="/root/.local/bin:$PATH"
 COPY ./pyproject.toml ./uv.lock ./
-RUN uv sync --locked --no-dev
+RUN uv sync
