--- a/environment/pyproject.toml
+++ b/environment/pyproject.toml
@@ -8,9 +8,9 @@ dependencies = [
     "aind-behavior-vr-foraging[data]",
     "aind-data-schema>=1.4.0",
     "aind-data-schema-models>=0.7.5",
-    "contraqctor>=0.4.3",
+    "contraqctor>=0.4.9",
     "pydantic-settings>=2.10.1",
 ]
 
 [tool.uv.sources]
-aind-behavior-vr-foraging = { git = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.git", rev = "dev" }
+aind-behavior-vr-foraging = { git = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.git", rev = "main" }
