--- a/environment/pyproject.toml
+++ b/environment/pyproject.toml
@@ -7,9 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "aind-behavior-vr-foraging[data]",
     "aind-data-schema>=2.0",
-    "contraqctor>=0.4.3",
+    "contraqctor>=0.4.9",
     "pydantic-settings>=2.10.1",
 ]
 
 [tool.uv.sources]
-aind-behavior-vr-foraging = { git = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.git", rev = "4f194d22fae91f8108ab26cecba19527b9f19485" }
+aind-behavior-vr-foraging = { git = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.git", rev = "main" }
