Add ruff for linting

--- a/environment/pyproject.toml
+++ b/environment/pyproject.toml
@@ -13,3 +13,11 @@ dependencies = [
 
 [tool.uv.sources]
 aind-behavior-vr-foraging = { git = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.git", rev = "main" }
+
+[dependency-groups]
+
+dev = ["ruff"]
+
+[tool.uv]
+default-groups = ['dev']
+required-version = '>=0.8.4'
