--- a/environment/pyproject.toml
+++ b/environment/pyproject.toml
@@ -7,12 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "aind-behavior-vr-foraging[data]",
     "aind-data-schema>=2.0",
-    "contraqctor>=0.4.9",
     "pydantic-settings>=2.10.1",
+    "contraqctor>=0.5.3"
 ]
-
-[tool.uv.sources]
-aind-behavior-vr-foraging = { git = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.git", rev = "main" }
 
 [dependency-groups]
 
